--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js-pure": "^3.38.1",
     "core-util-is": "^1.0.2",
     "cross-spawn": "^7.0.3",
+    "cucumber": "^6.0.7",
     "cucumber-expressions": "^8.3.0",
     "cucumber-tag-expressions": "^2.0.3",
     "d": "^1.0.2",
@@ -222,7 +223,6 @@
     "@types/node": "^22.5.5",
     "@types/selenium-webdriver": "^4.1.26",
     "chai": "^5.1.1",
-    "cucumber": "^6.0.7",
     "mocha": "^10.7.3",
     "selenium-webdriver": "^4.24.0",
     "ts-node": "^10.9.2",
@@ -230,7 +230,7 @@
     "webdriver-manager": "^12.1.9"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "cucumber-js src/features/ -r src/step-definitions/ -r src/utils/ --tags \"@GROF-1\""
   },
   "keywords": [],
   "author": "",
