--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       "esModuleInterop": true,
       "outDir": "./dist"
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/features/**/*.feature"],
     "exclude": ["node_modules"],
-    "types": ["mocha", "node"]
+    "types": ["node"]
   }
   
